--- a/package.json
+++ b/package.json
@@ -10,9 +10,21 @@
     "postinstall": "nuxt prepare"
   },
   "devDependencies": {
+    "@headlessui/vue": "^1.7.16",
+    "@heroicons/vue": "^2.0.18",
     "@nuxt/devtools": "latest",
+    "@nuxtjs/tailwindcss": "^6.10.1",
+    "@tailwindcss/forms": "^0.5.7",
+    "autoprefixer": "^10.4.16",
     "nuxt": "^3.8.2",
+    "postcss": "^8.4.31",
+    "tailwindcss": "^3.3.5",
     "vue": "^3.3.8",
     "vue-router": "^4.2.5"
+  },
+  "dependencies": {
+    "axios": "^1.6.2",
+    "qrcode.vue": "^3.4.1",
+    "sass": "^1.69.5"
   }
 }
